--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,6 @@
-<h1> <%= @student.name%> </h1>
-<p> <%= @student.roll%> </p>
+<h1> <%= @student.profile_image  %></h1>
+<h1> <%= @student.name   %></h1>
+<h1> <%= @student.roll%> </h1>
 <h1> <%= @student.address%> </h1>
 <h1> <%= @student.email%> </h1>
+
