--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,5 @@
-<h1> <%= @student.profile_image  %></h1>
+<%# <h1> <%= @student.profile_image  %>
+<%# </h1> %> 
 <h1> <%= @student.name   %></h1>
 <h1> <%= @student.roll%> </h1>
 <h1> <%= @student.address%> </h1>
