--- a/app/views/testing_mailer/create_ac.html.erb
+++ b/app/views/testing_mailer/create_ac.html.erb
@@ -6,8 +6,8 @@
   <body>
     <h1>Welcome to this web page, <%= @student.name %></h1>
 
-    <p>Here is an image for you:</p>
-    <%= image_tag @student.profile_image, alt: "Profile Image" %>
+    <%# <p>Here is an image for you:</p> %>
+    <%# <%= image_tag @student.profile_image, alt: "Profile Image" %> 
       
     
       
